# RESP2

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  HISTORY.md  LICENSE  README.md  build_datasets.py  environment.yml  ev_traintest  pyproject.toml  requirements.txt  run_experiments.py  run_tt_comparisons.sh  tmp_file.txt  traintest_eval.sh  wget-log
.github/workflows/: build.yml  test_cpp_protein_encoders.yml
absolut_experiments/: run_absolut_experiments.py  single_target_exp.sh  strs
absolut_experiments/absolut_results/: 1JPS_T_isde_single_target_xgpr_selected.csv  1JPS_T_isde_single_target_xgpr_selected.rtxt  1NCA_N_isde_single_target_xgpr_selected.csv  1NCA_N_isde_single_target_xgpr_selected.rtxt  1TQB_A_isde_single_target_xgpr_selected.csv  1TQB_A_isde_single_target_xgpr_selected.rtxt  2W9E_A_isde_single_target_xgpr_selected.csv  2W9E_A_isde_single_target_xgpr_selected.rtxt  3L95_X_isde_single_target_xgpr_selected.csv  3L95_X_isde_single_target_xgpr_selected.rtxt  3RVV_A_isde_single_target_xgpr_selected.csv  3RVV_A_isde_single_target_xgpr_selected.rtxt  4H88_A_isde_single_target_xgpr_selected.csv  4H88_A_isde_single_target_xgpr_selected.rtxt  4M7L_T_isde_single_target_xgpr_selected.csv  4M7L_T_isde_single_target_xgpr_selected.rtxt  4PP1_A_isde_single_target_xgpr_selected.csv  4PP1_A_isde_single_target_xgpr_selected.rtxt  4QNP_A_isde_single_target_xgpr_selected.csv  4QNP_A_isde_single_target_xgpr_selected.rtxt  4YUE_C_isde_single_target_xgpr_selected.csv  4YUE_C_isde_single_target_xgpr_selected.rtxt  5CZV_A_isde_single_target_xgpr_selected.csv  5CZV_A_isde_single_target_xgpr_selected.rtxt  5LQB_A_isde_single_target_xgpr_selected.csv  5LQB_A_isde_single_target_xgpr_selected.rtxt  dust_mite_isde_CNN_selected.csv  dust_mite_isde_CNN_selected.rtxt  dust_mite_isde_xgpr_selected.csv  dust_mite_isde_xgpr_selected.rtxt  il2_isde_CNN_selected.csv  il2_isde_CNN_selected.rtxt  il2_isde_xgpr_selected.csv  il2_isde_xgpr_selected.rtxt  neuraminidase_isde_CNN_selected.csv  neuraminidase_isde_CNN_selected.rtxt  neuraminidase_isde_xgpr_selected.csv  neuraminidase_isde_xgpr_selected.rtxt  notch_isde_CNN_selected.csv  notch_isde_CNN_selected.rtxt  (+11 more)
docs/: available_models.rst  build_apidoc.sh  conf.py  contact.rst  in_silico_directed_evolution.rst  index.rst  protein_encoding.rst  requirements.txt  resp_toolkit_classification_example.ipynb  uncertainty_aware_dl.rst
encoded_data/: chothia_template.rxt  key_mutants.rtxt
multi_target_modeling_src/data_encoding/: normalized_encode_sequences.py  reorg_sequences.py
multi_target_modeling_src/model_code/: bytenet_cnn.py  model_comparison_experiments.py  variational_Bayes_regression.py
multi_target_modeling_src/protein_tools/: generate_antibody_pssms.py  (+1 more)
results_and_resources/: traintest_log.rtxt  traintest_log.txt
rust/: Cargo.toml
tests/: test_basic_tokenizers.py
(+179 files in other folders)
