[build-system]
requires = ["scikit-build-core >=0.4.3", "numpy", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "resp_protein_toolkit"
version = "0.2.1"
description = "Basic toolkit for common protein engineering tasks"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Jonathan Parkinson", email = "jlparkinson1@gmail.com" },
]
license = {file = "LICENSE"}
keywords = ["RESP", "protein_engineering"]


[project.urls]
Homepage = "https://github.com/Wang-lab-UCSD/RESP2"
Documentation = "https://resp-protein-toolkit.readthedocs.io/en/latest/"


[tool.scikit-build]
# Exclude files used only to reproduce experiments from the
# original paper. Note that we cannot use the gitignore for
# these since some files that should not be in the wheel
# need to be in the repo.
sdist.exclude = [".github", "absolut_experiments",
            "sars_cov2_experiments", "encoded_data",
            "results_and_resources"]
wheel.exclude = [".github", "absolut_experiments",
            "sars_cov2_experiments", "encoded_data",
            "results_and_resources"]

# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.8"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
logging.level = "INFO"
wheel.py-api = "cp312"
cmake.verbose = true
cmake.version = ">=3.18"

# IMPORTANT: If debugging, uncomment BOTH of the following lines.
# This build backend automatically strips unless install.strip is
# set to false, so that even if build-type is set to debug,
# the symbols will be stripped.
#cmake.build-type = "Debug"
#install.strip = false

cmake.build-type = "Release"
